--- a/index.html
+++ b/index.html
@@ -11,39 +11,51 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
-        <header class="elHeaderBox flexHeader">
-            <div>
-                <a href="./index.html"><img src="./assets/imagenes/Logo final.png" class="elLogo"  alt="logo"></a>
-            </div>
-            <nav>
-                <div class="desplegarNav">
-                    <button class="botonNav">Categorias</button>
-                    <div class="contenidoNav">
-                        <li> <a href="#">Inicio </a></li>
-                        <li> <a href="./pages/gaming.html">Gaming</a></li>
-                        <li> <a href="./pages/Videojuegos.html">Videojuegos</a></li>
-                        <li> <a href="./pages/Streaming.html">Streaming</a></li>
-                        <li> <a href="./pages/contacto.html">contacto</a></li>
-                    </div>
+        <header>
+            <nav class="navbar navbar-expand-lg  elHeaderBox">
+                <div class="container-fluid ">
+                  <a class="navbar-brand" href="./index.html"> <img src="./assets/imagenes/Logo final.png" alt="" width="60" height="58"></a>
+                  <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active navColor" aria-current="page" href="#">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./pages/gaming.html">Gaming</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./pages/videojuegos.html">Videojuegos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./pages/streaming.html">Streaming</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./pages/contacto.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </nav>
+              </nav>
         </header>
         <main>
             <h1>The Gamer's Shire</h1>
             <h3 class="subtitulos3 boxSubtitulos">Streaming mas vistos por la comunidad</h3>
             <section class="container contenedorFlex">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
                         <img src="./assets/imagenes/A_Seagull_portada.png" class="boxImg" alt="A_Seagull - Overwatch 2 competitivo">
                         <h4 class="subtitulos4">A_Seagull - Overwatch 2 competitivo</h4>
                         <a href="https://www.twitch.tv/a_seagull" class="linksExternos" target="_blank">A_Seagull Twitch</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-5 col-lg-4">
                         <img src="./assets/imagenes/Ibai.jpg" class="boxImg" alt="ibai - Deportes y entretenimiento">
                         <h4 class="subtitulos4">ibai - Deportes y entretenimiento</h4>
                         <a href="https://www.twitch.tv/ibai" class="linksExternos" target="_blank">ibai Twitch</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-12 col-lg-3">
                         <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodriguez - humor y entretenimiento">
                         <h4 class="subtitulos4">luquitarodriguez - humor y entretenimiento</h4>
                         <a href="https://www.twitch.tv/luquitarodriguez" class="linksExternos target="_blank"> luquitarodriguez Twitch</a>
@@ -60,17 +72,17 @@
         <h3 class="subtitulos3 boxSubtitulos">Arma tu Setup</h3>
         <section class="container contenedorFlex">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <img src="./assets/imagenes/nvidia gforce 3060.webp" class="boxImg" alt="placa de video">
                     <p class="parrafos">Nvidia Gigabyte GeForce RTX 30 Series RTX 3060</p>
                     <a href="https://www.mercadolibre.com.ar/placa-de-video-nvidia-gigabyte-gaming-geforce-rtx-30-series-rtx-3060-gv-n3060gaming-oc-12gd-rev-10-oc-edition-12gb/p/MLA18618581?pdp_filters=category:MLA1658#searchVariation=MLA18618581&position=8&search_layout=grid&type=product&tracking_id=3868caae-c69d-4b9d-bad2-60e4cbe7f5c3" class="linksExternos target="_blank">Nvidia GeForce RTX 3060</a>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-5 col-lg-4">
                     <img src="./assets/imagenes/auriculares hyperx.webp" class="boxImg" alt="Auriculares hyperx">
                     <p class="parrafos">Auriculares inalámbricos HyperX Cloud Flight con luz rojo</p>
                     <a href="https://www.mercadolibre.com.ar/auriculares-gamer-inalambricos-hyperx-cloud-flight-negro-con-luz-rojo-led/p/MLA15313319?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=125221141365&matt_match_type=&matt_network=g&matt_device=c&matt_creative=544135253008&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=139868337&matt_product_id=MLA15313319-product&matt_product_partition_id=1701193342077&matt_target_id=aud-1659384947926:pla-1701193342077&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfUzWhfTRg0z8VMl7XHecWAmXPzCI0vPCxbHXOP4QQ4oLNykCRLmdZwaArrOEALw_wcB" class="linksExternos target="_blank">Auriculares HyperX</a>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-12 col-lg-3">
                     <img src="./assets/imagenes/monitor.webp" class="boxImg alt="Monitor Gigabyte 27'">
                     <p class="parrafos">Monitor gamer Gigabyte G27F led 27 " negro 100V/240V</p>
                     <a href="https://www.mercadolibre.com.ar/monitor-gamer-gigabyte-g27f-led-27-negro-100v240v/p/MLA16550870?pdp_filters=category:MLA14407#searchVariation=MLA16550870&position=4&search_layout=grid&type=product&tracking_id=011c78d9-179e-4896-8996-93dd791dee02" class="linksExternos target="_blank">Monitor gamer Gigabyte</a>
@@ -80,17 +92,17 @@
         <h3 class="subtitulos3 boxSubtitulos">Juegos recomendados del editor</h3>
         <section class="container contenedorFlex">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <img src="./assets/imagenes/Elden ring.jpg" class="boxImg" alt="Elden Ring">
                     <h4 class="subtitulos4">Elden Ring</h4>
                     <a href="https://store.steampowered.com/app/1245620/ELDEN_RING/" class="linksExternos target="_blank"> Elden Ring -   Steam</a>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-5 col-lg-4">
                     <img src="./assets/imagenes/Proyect zomboid.jpg" class="boxImg" alt="Proyect Zomboid">
                     <h4 class="subtitulos4">Proyect Zomboid</h4>
                     <a href="https://store.steampowered.com/app/108600/Project_Zomboid/"  class="linksExternos target="_blank">Proyect Zomboid - Steam</a>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-12 col-lg-3">
                     <img src="./assets/imagenes/resident evil 2 remake.jpg" class="boxImg" alt="Resident evil 2">
                     <h4 class="subtitulos4">Resident Evil 2: Remake</h4>
                     <a href="https://store.steampowered.com/app/883710/Resident_Evil_2/"  class="linksExternos" target="_blank">Resident Evil 2: Remake - Steam</a>
@@ -101,17 +113,17 @@
         <h3 class="subtitulos3 boxSubtitulos">Lore mas visto por la comunidad</h3>
         <section class="container contenedorFlex">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <img src="./assets/imagenes/Wow 1.jpg" class="boxImg" alt="Lore World of Warcraft">
                     <br>
                     <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"  class="linksExternos" target="_blank">World of Warcraft</a>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-5 col-lg-4">
                     <img src="./assets/imagenes/cyberpunk 2077.jpg" class="boxImg" alt="cyberpunk 2077">
                     <br>
                     <a href="https://cyberpunk.fandom.com/es/wiki/Cyberpunk_2077" class="linksExternos target="_blank">Cyberpunk 2077</a>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-12 col-lg-3">
                     <img src="./assets/imagenes/Poe.jpg" class="boxImg" alt="Path of Exile">
                     <br>
                     <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos" target="_blank">Path of Exile</a>
@@ -121,7 +133,7 @@
         </section>
         <footer class="container-fluid flexFooter2">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <a href="https://www.instagram.com/" class="linksExternos"  target="_blank">Instragram</a>
                     <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
                     <a href="https://www.twitch.tv/" class="linksExternos" target="_blank">Twitch</a>
@@ -131,10 +143,10 @@
                     <a href="https://store.steampowered.com/" class="linksExternos" target="_blank">Steam</a>
                     <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-5 col-lg-4">
                     <p class="parrafos">Todos los derechos reservados - JDL®</p>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-12 col-lg-3">
                     <a class="linksExternos href="" >Condiciones de uso</a>
                     <a class="linksExternos href="">Aviso de privacidad </a>
                 </div>
