--- a/pages/streaming.html
+++ b/pages/streaming.html
@@ -11,22 +11,34 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
-        <header class="elHeaderBox flexHeader">
-            <div>
-                <a href="../index.html"><img src="../assets/imagenes/Logo final.png" class="elLogo"  alt="logo"></a>
-            </div>
-            <nav>
-                <div class="desplegarNav">
-                    <button class="botonNav">Categorias</button>
-                    <div class="contenidoNav">
-                        <li> <a href="../index.html">Inicio </a></li>
-                        <li> <a href="./gaming.html">Gaming</a></li>
-                        <li> <a href="./videojuegos.html">Videojuegos</a></li>
-                        <li> <a href="#">Streaming</a></li>
-                        <li> <a href="./contacto.html">contacto</a></li>
-                    </div>
+        <header>
+            <nav class="navbar navbar-expand-lg  elHeaderBox">
+                <div class="container-fluid ">
+                  <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="" width="60" height="58"></a>
+                  <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active navColor" aria-current="page" href="../index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./gaming.html">Gaming</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./videojuegos.html">Videojuegos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="#">Streaming</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./contacto.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </nav>
+              </nav>
         </header>
         <main>
             <h1>The Gamer's Shire</h1>
@@ -100,25 +112,25 @@
         </section>
         <footer class="container-fluid flexFooter2">
             <div class="row">
-                <div class="col">
-                    <a href="https://www.instagram.com/" class="linksExternos  target="_blank">Instragram</a>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <a href="https://www.instagram.com/" class="linksExternos"  target="_blank">Instragram</a>
                     <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
                     <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
                     <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
-                    <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
+                    <a href="https://www.reddit.com/" class="linksExternos" target="_blank">Reddit</a>
                     <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
-                    <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
+                    <a href="https://store.steampowered.com/" class="linksExternos" target="_blank">Steam</a>
                     <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-5 col-lg-4">
                     <p class="parrafos">Todos los derechos reservados - JDL®</p>
                 </div>
-                <div class="col">
-                    <a class="linksExternos href="" >Condiciones de uso</a>
-                    <a class="linksExternos href="">Aviso de privacidad </a>
+                <div class="col-sm-12 col-md-12 col-lg-3">
+                    <a class="linksExternos href=" >Condiciones de uso</a>
+                    <a class="linksExternos href=">Aviso de privacidad </a>
                 </div>
             </div>
         </footer>
-        <script src="./js/bootstrap.bundle.min.js"></script>
+        <script src="../js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
